--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --port 4173",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview --port 4173"
+    "preview": "vite preview --port 4173",
+    "start": "npx serve -s dist -l 4173"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
