--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview --port 4173"
-    
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
     "framer-motion": "^12.4.7",
     "i18next": "^24.2.2",
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-slick": "^0.23.13",
