--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,105 @@
-# Logs
-logs
-*.log
+# Operating System files
+.DS_Store
+Thumbs.db
+
+# Node.js
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+package-lock.json
+yarn.lock
 
-node_modules
-dist
-dist-ssr
-*.local
+# Logs
+logs
+*.log
+logs/*.log
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+# Build artifacts
+dist/
+build/
+coverage/
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE/Editor settings
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+
+# Testing
+/coverage
+/junit.xml
+
+# Dependency directories
+bower_components/
+jspm_packages/
+
+# Next.js and Nuxt.js
+.next/
+.nuxt/
+
+# React Native
+.expo/
+*.expo
+*.expo-shared
+
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+.Python
+env/
+venv/
+
+# Java
+*.class
+*.jar
+*.war
+*.ear
+
+# macOS system files
+*.DS_Store
+
+# Linux system files
+*.swp
+*~
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+*.log
+
+# GitHub Actions and CI/CD tools
+.github/
+.gitlab-ci.yml
+
+# Frontend framework specific
+/public/static/
+public/assets/
+out/
+
+# Sentry and monitoring
+.sentryclirc
+.sentry-debug-meta
+
+# JetBrains
+.idea/
+
+# Optional: Secret or credentials
+secrets/
+firebase.json
+aws-credentials.json
+
+# Ignore lockfiles
+package-lock.json
+yarn.lock
