--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "axios": "^1.8.1",
     "framer-motion": "^12.4.7",
     "i18next": "^24.2.2",
     "js-cookie": "^3.0.5",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.13.9",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@types/react-slick": "^0.23.13",
