--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
-    "react-router-dom": "^7.2.0",
+    "react-router": "^6.30.0",
+    "react-router-dom": "^6.30.0",
     "react-scroll": "^1.9.3",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
